# SE-Cybercieve-Project

./: .gitignore  LICENSE  README.md  devbox.json  package-lock.json
.github/utils/: file-filter.yaml
.github/workflows/: close-stale-issues-and-pr.yaml  deploy-review.yaml  deploy.yaml  fly-review.yaml  test.yaml
.github/workflows/test/: Taskfile.yaml  event.json
backend/: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile.fly  README.md  Taskfile.yaml  dockerfile  fly.toml  pyproject.toml
backend/app/: main.py
backend/app/api/: files_manage.py  recommend.py  statistics.py  users.py  ws.py
backend/app/components/: html_content.py
backend/app/core/: config.py
backend/app/db/: supabase.py
backend/app/models/: exception.py  files_model.py  users_model.py
backend/app/services/: LAB8_2.cpp  auth.py  files_manage.py  llm.py  recommend.py  users.py  websocket_manager.py
backend/tests/: .env.test  conftest.py  test_auth.py  test_files_manage.py  test_main.py  test_repro.py  test_user.py
backend/tests/auth_test/: test_auth.py  test_repro.py  test_user.py
frontend/: .env.example  .env.test  .gitignore  Taskfile.yaml  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: axios.ts  supabaseClient.ts
frontend/src/components/: FileUpload.tsx  LoadingSpinner.tsx  ProtectedRoute.tsx  ScanResult.tsx  forgot-password-form.tsx  login-form.tsx  sign-up-form.tsx  update-password-form.tsx
frontend/src/pages/: AuthCallback.tsx  (+12 more)
(+20 files in other folders)
