[project]
name = "se-web-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.123.5",
    "psycopg2-binary",
    "pydantic-settings>=2.12.0",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.44",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
    "coverage>=7.6.1",
    "pytest-mock>=3.15.1",
    "langchain-groq>=1.1.2",
    "langchain>=1.2.10",
    "requests>=2.32.5",
    "groq>=0.37.1",
]
